--- a/package.json
+++ b/package.json
@@ -50,5 +50,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://pjj186.github.io/jongflix"
+  "homepage": "https://angry-wozniak-26967a.netlify.app/"
 }
